# paintop

./: .edict.toml  .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
crates/paintop-cli/: Cargo.toml
crates/paintop-cli/fixtures/plans/: empty-valid.json  graph-blur.json
crates/paintop-cli/src/: cli.rs  commands.rs  main.rs  output.rs  stub_ops.rs
crates/paintop-cli/tests/: cli.rs
crates/paintop-core/: Cargo.toml
crates/paintop-core/src/: graphviz.rs  lib.rs
crates/paintop-core/src/cache/: content.rs  error.rs  key.rs  mod.rs  replay.rs  store.rs
crates/paintop-core/src/evidence/: assertions.rs  atomic.rs  contact.rs  error.rs  layout.rs  manifest.rs  materialize.rs  mod.rs  png.rs  replay.rs  trace.rs  writer.rs
crates/paintop-core/src/executor/: demand.rs  dispatch.rs  error.rs  mod.rs  op_impl.rs  roi.rs  value.rs
crates/paintop-core/src/tile/: execute.rs  grid.rs  mask_summary.rs  mod.rs  parallel.rs  reduce.rs  schedule.rs
crates/paintop-core/tests/: cache_replay.rs  evidence_bundle.rs  executor.rs  failure_artifacts.rs  generated_graphs.rs  roi_differential.rs  simplify_differential.rs
crates/paintop-cpu/: Cargo.toml
crates/paintop-cpu/src/: adjust.rs  alpha.rs  assert.rs  bandpass.rs  bilateral.rs  blend.rs  bounds_assert.rs  canvas.rs  channel.rs  color.rs  composite.rs  composite_over.rs  convolve.rs  crop.rs  dft.rs  diff.rs  domain_warp.rs  edt.rs  ellipse.rs  fft.rs  fill.rs  flip.rs  frequency.rs  frequency_energy.rs  frequency_preserved.rs  gaussian_blur.rs  gaussian_pyramid.rs  gradient.rs  guided.rs  inspect.rs  io.rs  laplacian.rs  lib.rs  local_optimize.rs  mask.rs  mask_algebra.rs  mask_bounds.rs  mask_macros.rs  mask_polygon.rs  mask_to_sdf.rs  (+22 more)
crates/paintop-cpu/src/adjust/: tests.rs
crates/paintop-cpu/src/alpha/: tests.rs
crates/paintop-cpu/src/assert/: tests.rs
crates/paintop-cpu/src/bandpass/: tests.rs
crates/paintop-cpu/src/bilateral/: tests.rs
crates/paintop-cpu/src/blend/: tests.rs
crates/paintop-cpu/src/bounds_assert/: tests.rs
crates/paintop-cpu/src/canvas/: tests.rs
crates/paintop-cpu/src/channel/: tests.rs
crates/paintop-cpu/src/color/: tests.rs
crates/paintop-cpu/src/composite/: tests.rs
crates/paintop-cpu/src/composite_over/: tests.rs
crates/paintop-cpu/src/convolve/: tests.rs
crates/paintop-cpu/src/crop/: tests.rs
crates/paintop-cpu/src/dft/: tests.rs
crates/paintop-cpu/src/diff/: tests.rs
crates/paintop-cpu/src/domain_warp/: tests.rs
crates/paintop-cpu/src/domains/: alpha.rs  analyze.rs  assert.rs  color.rs  composite.rs  debug.rs  field.rs  filter.rs  frequency.rs  image.rs  io.rs  mask.rs  mod.rs  optimize.rs  paint.rs  repair.rs  sdf.rs
crates/paintop-cpu/src/edt/: tests.rs
crates/paintop-cpu/src/ellipse/: tests.rs
crates/paintop-cpu/src/fft/: tests.rs
crates/paintop-cpu/src/fill/: tests.rs
crates/paintop-cpu/src/flip/: tests.rs
crates/paintop-cpu/src/frequency_energy/: tests.rs
crates/paintop-cpu/src/frequency_preserved/: tests.rs
crates/paintop-cpu/src/gaussian_blur/: tests.rs
crates/paintop-cpu/src/gaussian_pyramid/: tests.rs
crates/paintop-cpu/src/gradient/: tests.rs
crates/paintop-cpu/src/guided/: tests.rs
crates/paintop-cpu/src/inspect/: tests.rs
crates/paintop-cpu/src/io/: tests.rs
crates/paintop-cpu/src/laplacian/: tests.rs
crates/paintop-cpu/src/local_optimize/: tests.rs
crates/paintop-cpu/src/mask/: tests.rs
crates/paintop-cpu/src/mask_algebra/: tests.rs
crates/paintop-cpu/src/mask_bounds/: tests.rs
crates/paintop-cpu/src/mask_macros/: tests.rs
crates/paintop-cpu/src/mask_polygon/: tests.rs
crates/paintop-cpu/src/mask_to_sdf/: tests.rs
crates/paintop-cpu/src/mask_topology/: tests.rs
crates/paintop-cpu/src/materialize/: tests.rs
crates/paintop-cpu/src/noise/: tests.rs
crates/paintop-cpu/src/optimize/: characterization.rs  tests.rs
crates/paintop-cpu/src/optimized/: bench.rs  kernels.rs  mod.rs
crates/paintop-cpu/src/orientation/: tests.rs
crates/paintop-cpu/src/pad/: tests.rs
crates/paintop-cpu/src/patch_field/: tests.rs
crates/paintop-cpu/src/patch_synthesize/: tests.rs
crates/paintop-cpu/src/poisson/: characterization.rs  tests.rs
crates/paintop-cpu/src/poisson_blend/: tests.rs
crates/paintop-cpu/src/reaction_diffusion/: tests.rs
crates/paintop-cpu/src/resize/: tests.rs
crates/paintop-cpu/src/rotate/: tests.rs
crates/paintop-cpu/src/screened_poisson/: tests.rs
crates/paintop-cpu/src/sdf_algebra/: tests.rs
crates/paintop-cpu/src/sdf_ops/: tests.rs
crates/paintop-cpu/src/splat/: tests.rs
crates/paintop-cpu/tests/: banner_conformance.rs  blemish_conformance.rs  gaussian_separable_differential.rs  masked_edit_4k.rs  patch_repair_fixtures.rs  pyramid_fixtures.rs  required_inputs.rs  sdf_northstar_conformance.rs  simd_baseline_benchmark.rs  simd_differential.rs  tiled_convolution.rs  tiled_gradient_guard.rs  tiled_pointwise.rs  tiled_reductions.rs
crates/paintop-image/: Cargo.toml
crates/paintop-image/src/: lib.rs
crates/paintop-ir/: Cargo.toml
crates/paintop-ir/src/: canonical.rs  check.rs  contract.rs  error.rs  hash.rs  lib.rs  limits.rs  manifest.rs  normalize.rs  plan.rs  region.rs  registry.rs  resolve.rs  resource.rs  scan.rs  simplify.rs  verify.rs
crates/paintop-ir/tests/: canonical_replay.rs  hash_fixtures.rs  normalize_fixtures.rs  plan_fixtures.rs
crates/paintop-testkit/: Cargo.toml
crates/paintop-testkit/src/: differential.rs  fixtures.rs  lib.rs  metamorphic.rs  perf.rs
crates/paintop-wgpu/: Cargo.toml
crates/paintop-wgpu/src/: lib.rs
crates/paintop-wgpu/tests/: fused_pointwise_gpu.rs  fusion_differential_gpu.rs  pipeline_gpu.rs  readback_trace_gpu.rs  separable_differential_gpu.rs  splat_differential_gpu.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/plan_parse/: duplicate-key.json  duplicate-node-param-key.json  limit-depth.json  limit-node-count.json  unknown-field.json  unknown-node-field.json
fuzz/fuzz_targets/: plan_parse.rs  png_decode.rs
xtask/: Cargo.toml
xtask/src/: main.rs  perf.rs  verify_op.rs
xtask/tests/: changed_op_ci.rs
(+141 files in other folders)
