[workspace]
resolver = "3"
members = [
    "crates/paintop-ir",
    "crates/paintop-image",
    "crates/paintop-core",
    "crates/paintop-cpu",
    "crates/paintop-testkit",
    "crates/paintop-cli",
    "xtask",
]

[workspace.package]
edition = "2024"
version = "0.0.0"
license = "MIT"
repository = "https://github.com/bobisme/paintop"
rust-version = "1.96"

[workspace.dependencies]
# Internal crates
paintop-ir = { path = "crates/paintop-ir" }
paintop-image = { path = "crates/paintop-image" }
paintop-core = { path = "crates/paintop-core" }
paintop-cpu = { path = "crates/paintop-cpu" }
paintop-testkit = { path = "crates/paintop-testkit" }

# Shared third-party pins (matched to ../msh per M0_DECISIONS.md D4)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
image = "0.25"
nalgebra = "0.33"
clap = { version = "4.5", features = ["derive"] }
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = "2.0"
blake3 = "1.5"
sha2 = "0.10"
anyhow = "1.0"
proptest = "1.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
