[package]
name = "xtask"
description = "Repository automation (schema export, op verification, CI helpers)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
paintop-ir.workspace = true
paintop-testkit.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
