[package]
name = "paintop-cli"
description = "Stable machine-facing CLI. Reuses the canonical IR rather than parallel structs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "paintop"
path = "src/main.rs"

[dependencies]
paintop-ir.workspace = true
paintop-core.workspace = true
paintop-cpu.workspace = true
anyhow.workspace = true
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
