[package]
name = "paintop-cpu"
description = "Scalar oracle plus SIMD/Rayon op implementations of contracts owned by core/image/ir."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
paintop-ir.workspace = true
paintop-image.workspace = true
paintop-core.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Image codecs only (PNG decode/encode); decoded bytes are converted into
# paintop resource types immediately (plan.md §17.2, M0_DECISIONS).
image = { workspace = true }

[dev-dependencies]
paintop-testkit = { workspace = true }

[lints]
workspace = true
