[package]
name = "paintop-image"
description = "Image, mask, and field abstractions and contracts. Knows nothing about 3D."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
paintop-ir.workspace = true

[lints]
workspace = true
