[package]
name = "paintop-testkit"
description = "Fixtures, metrics, and the metamorphic/differential test harness."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
paintop-ir.workspace = true
paintop-image.workspace = true
paintop-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
image.workspace = true
thiserror.workspace = true

[lints]
workspace = true
